crates/errmeta_derive/tests/fails/invalid_error_type.rs
pub struct InvalidErrorType;

#[derive(Debug, errmeta_derive::ErrorMeta)]
enum TestError {
  #[error_meta(code = "bad_request", error_type = InvalidErrorType)]
  BadRequest,
}

fn main() {}
