crates/errmeta_derive/tests/fails/invalid_error_type.stderr
error[E0277]: the trait bound `InvalidErrorType: AsRef<str>` is not satisfied
 --> tests/fails/invalid_error_type.rs:3:17
  |
3 | #[derive(Debug, errmeta_derive::ErrorMeta)]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `AsRef<str>` is not implemented for `InvalidErrorType`
 --> tests/fails/invalid_error_type.rs:1:1
  |
1 | pub struct InvalidErrorType;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `errmeta_derive::ErrorMeta` (in Nightly builds, run with -Z macro-backtrace for more info)
